# compile-obsidian

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  llm-wiki.md  pyproject.toml
.claude/commands/: context.md  ingest.md  lint.md
.github/workflows/: release.yml
MyWiki/: Package.resolved  Package.swift
MyWiki/Sources/MyWikiApp/: ContentView.swift  LauncherView.swift  MarkdownContentView.swift  MyWikiApp.swift  QueryDetailView.swift  SettingsView.swift
MyWiki/Sources/MyWikiCore/: AppLogger.swift  AppModel.swift  ClaudeDispatcher.swift  ClaudeQueryRunner.swift  CompileEvent.swift  CompileRunner.swift  CompileRunning.swift  FeedStore.swift  (+6 more)
MyWiki/support/: AppIcon.icns  Info.plist  compile-bin.spec
compile/: cli.py  compiler.py  config.py  dates.py  eval.py  evidence.py  fetch.py  health.py  ingest.py  lint.py  markdown.py  obsidian.py  outputs.py  page_ir.py  page_types.py  pdf_artifacts.py  query.py  resolve.py  resources.py  search_index.py  source_packet.py  store.py  suggest.py  text.py  verify.py  watcher.py  workspace.py
design/: architecture.md  mockups.html  ui-proposal.md
docs/: architecture.md  compiler-implementation-spec.md  workspace-modes.md
scripts/: build-mywiki-app.sh  download_arxiv_corpus.py
tests/: test_claude_setup.py  test_cli_helpers.py  test_cli_integration.py  test_compile.py  test_config.py  test_eval.py  test_evidence.py  test_fetch.py  test_health.py  test_markdown.py  test_obsidian.py  test_outputs.py  test_page_ir.py  test_page_types.py  test_store.py  test_text.py  test_verify.py  test_verify_extended.py  test_workspace.py
(+25 files in other folders)
